--- a/Makefile.in
+++ b/Makefile.in
@@ -195,7 +195,7 @@ CSCOPE = cscope
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in AUTHORS \
 	COPYING ChangeLog INSTALL NEWS README compile config.guess \
-	config.sub install-sh ltmain.sh missing
+	config.sub depcomp install-sh ltmain.sh missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -424,7 +424,12 @@ EXTRA_DIST = \
 	sound_effects_player.desktop \
 	icons/sound_effects_player_icon.png \
 	icons/sound_effects_player_icon_hires.png \
-	$(INTLTOOL_FILES)
+	sample/440Hz.wav \
+	sample/Sample_cues.xml \
+	sample/Sample_equipment.xml \
+	sample/Sample_project.xml \
+	sample/Sample_sounds.xml \
+	sample/Sample_sound_sequence.xml
 
 iconsdir = ${datadir}/icons/hicolor/48x48/apps
 icons_DATA = icons/sound_effects_player_icon.png
@@ -988,17 +993,12 @@ uninstall-am: uninstall-dist_desktopDATA uninstall-dist_docDATA \
 
 .PRECIOUS: Makefile
 
+	sample/try_player.sh \
+	$(INTLTOOL_FILES)
 
 # Remove doc directory on uninstall
 uninstall-local:
 	-rm -r $(docdir)
-
-# Rules to create pdf and rtf files from odt files
-doc/sound_effects_player_overview.pdf : doc/sound_effects_player_overview.odt
-	libreoffice --headless --convert-to pdf doc/sound_effects_player_overview.odt --outdir doc
-
-doc/sound_effects_player_overview.rtf : doc/sound_effects_player_overview.odt
-	libreoffice --headless --convert-to rtf doc/sound_effects_player_overview.odt --outdir doc
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
