--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     - autoconf
     - automake
     - autotools-dev
+    - aclocal
     - intltool
     - libgstreamer1.0-dev
     - libgstreamer-plugins-base1.0-dev
