--- a/Makefile.in
+++ b/Makefile.in
@@ -404,7 +404,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src po doc icons
+SUBDIRS = src man po doc icons sample
 dist_doc_DATA = \
 	README \
 	COPYING \
@@ -412,7 +412,6 @@ dist_doc_DATA = \
 	ChangeLog \
 	INSTALL \
 	NEWS \
-	listing/code.tex \
 	listing/code.pdf
 
 INTLTOOL_FILES = intltool-extract.in \
