--- a/Makefile.in
+++ b/Makefile.in
@@ -195,7 +195,7 @@ CSCOPE = cscope
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in AUTHORS \
 	COPYING ChangeLog INSTALL NEWS README compile config.guess \
-	config.sub depcomp install-sh ltmain.sh missing
+	config.sub install-sh ltmain.sh missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -455,6 +455,15 @@ EXTRA_DIST = \
 	example_01/Example_01_sound_sequence.xml \
 	example_01/Example_01_sounds.xml \
 	example_01/run_example_01.sh \
+	example_02/car.wav \
+	example_02/circular_saw.wav \
+	example_02/Example_02_cues.xml \
+	example_02/Example_02_equipment.xml \
+	example_02/Example_02_project.xml \
+	example_02/Example_02_script.xml \
+	example_02/Example_02_sound_sequence.xml \
+	example_02/Example_02_sounds.xml \
+	example_02/run_example_02.xml \
 	$(INTLTOOL_FILES)
 
 iconsdir = ${datadir}/icons/hicolor/48x48/apps
