--- a/config.h.in
+++ b/config.h.in
@@ -116,6 +116,9 @@
 /* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
 
+/* last modification date */
+#undef MODIFICATION_DATE
+
 /* Name of package */
 #undef PACKAGE
 
