depend on libtime

--- a/config.h.in
+++ b/config.h.in
@@ -102,6 +102,9 @@
 /* Define to 1 if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
 
+/* Define to 1 if you have the `time_current_tm' function. */
+#undef HAVE_TIME_CURRENT_TM
+
 /* Define to 1 if your `struct tm' has `tm_zone'. Deprecated, use
    `HAVE_STRUCT_TM_TM_ZONE' instead. */
 #undef HAVE_TM_ZONE
