Let the internal sequencer respond to the operator pressing the Stop button.

--- a/Makefile.in
+++ b/Makefile.in
@@ -408,7 +408,9 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src man po doc icons sample example_01 example_02 example_03
+SUBDIRS = src man po doc icons sample \
+example_01 example_02 example_03 
+
 dist_doc_DATA = \
 	README \
 	COPYING \
